--- a/index.html
+++ b/index.html
@@ -3,43 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#121212" />
+  <title>Agenda de Actividades-Maren</title>
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon-192.png" />
-  <title>Agenda Diaria</title>
+  <meta name="theme-color" content="#03dac6" />
+  <!-- Librerías externas -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
+
   <header>
-    <h1>🗓️ Mi Agenda-Maren</h1>
+    <h1>📆 Agenda de Actividades-Maren</h1>
+    <button id="toggle-theme">🌓 Tema</button>
   </header>
 
-  <main>
-    <section id="calendar-view">
-      <h2>Calendario</h2>
-      <div id="calendar"></div>
+  <main class="container">
+    <!-- SECCIÓN CALENDARIO -->
+    <section class="calendar-section">
+      <div class="calendar-header">
+        <button id="prev-month">←</button>
+        <h2 id="month-year">Mes Año</h2>
+        <button id="next-month">→</button>
+      </div>
+      <div id="calendar" class="calendar-grid"></div>
     </section>
 
-    <section id="tasks-view" class="hidden">
-      <button id="back-button">⬅ Volver</button>
-      <h2 id="selected-date-title"></h2>
-      <ul id="task-list"></ul>
-
+    <!-- SECCIÓN TAREAS -->
+    <section class="task-section">
+      <h3 id="selected-date-title">📅 Selecciona un día</h3>
+      
       <form id="task-form">
         <input type="text" id="task-input" placeholder="Nueva actividad..." required />
         <button type="submit">Agregar</button>
       </form>
+
+      <ul id="task-list"></ul>
+
+      <div class="task-actions">
+        <button id="export-pdf">📄 Exportar PDF</button>
+        <button id="export-excel">📊 Exportar Excel</button>
+        <button id="enable-notifications">🔔 Notificar Hoy</button>
+      </div>
     </section>
   </main>
 
-  <footer>
-    <p>Hecho por Marcio 🛠️</p>
-  </footer>
+  <!-- Mensajes flotantes -->
+  <div id="toast-container"></div>
 
   <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('✅ Service Worker registrado'))
+        .catch(err => console.error('❌ Error al registrar SW:', err));
     }
   </script>
 </body>
